--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -447,6 +447,21 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/1097-4679%28199511%2951%3A
    year = {1995},
 }
 
+@article{Preece2020,
+   author = {Preece, D. A. and Becerra, R. and Robinson, K. and Gross, J. J.},
+   title = {The Emotion Regulation Questionnaire: Psychometric Properties in General Community Samples},
+   journal = {J Pers Assess},
+   volume = {102},
+   number = {3},
+   pages = {348-356},
+   ISSN = {1532-7752 (Electronic)
+0022-3891 (Linking)},
+   DOI = {10.1080/00223891.2018.1564319},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/30714818
+https://www.tandfonline.com/doi/full/10.1080/00223891.2018.1564319},
+   year = {2020}
+}
+
 @Article{Peirce2019,
   author     = {Peirce, Jonathan and Gray, Jeremy R. and Simpson, Sol and MacAskill, Michael and Höchenberger, Richard and Sogo, Hiroyuki and Kastman, Erik and Lindeløv, Jonas Kristoffer},
   journal    = {Behavior Research Methods},
