cross referenced supplement

--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
@@ -186,7 +186,7 @@ include_graphics(here("99_Thinktank","Other","Paradigm_Scheme_T2.png" ))
 
 \newpage
 
-## Detailed information on psychometric measures
+## Detailed information on psychometric measures {#SupplementQuestionnaires}
 
 *General psychological well-being.* 
 
