--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -224,6 +224,26 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
   urldate    = {2020-03-30},
 }
 
+@Article{Fleischhauer2010,
+  author     = {Fleischhauer, Monika and Enge, Sören and Brocke, Burkhard and Ullrich, Johannes and Strobel, Alexander and Strobel, Anja},
+  journal    = {Personality \& Social Psychology Bulletin},
+  title      = {Same or different? {Clarifying} the relationship of need for cognition to personality and intelligence},
+  year       = {2010},
+  issn       = {1552-7433},
+  month      = jan,
+  note       = {Number: 1},
+  number     = {1},
+  pages      = {82--96},
+  volume     = {36},
+  abstract   = {Need for cognition (NFC) refers to an individual's tendency to engage in and enjoy effortful cognitive processing. So far, little attention has been paid to a systematic evaluation of the distinctiveness of NFC from traits with similar conceptualization and from intelligence. The present research contributes to filling this gap by examining the relation of NFC to well-established personality concepts (Study 1) and to a comprehensive measure of intelligence in a sample with broad educational backgrounds (Study 2). We observed NFC to be positively correlated with openness, emotional stability, and traits indicating goal orientation. Using confirmatory factor analysis and event-related potentials, incremental validity of NFC and openness to ideas was demonstrated, showing that NFC is more predictive of drive-related and goal-oriented behavior and attentional resource allocation. Regarding intelligence, NFC was more associated with fluid than with crystallized aspects of intelligence. Altogether, the results provide strong support for the conceptual autonomy of NFC.},
+  doi        = {10.1177/0146167209351886},
+  groups     = {CERED},
+  keywords   = {Adult, Female, Humans, Male, Young Adult, Personality, Attention, Cognition, Motivation, Adolescent, Affect, Evoked Potentials, Factor Analysis, Statistical, Germany, Goals, Intelligence, Intelligence Tests, Personality Inventory, Students, Temperament},
+  language   = {eng},
+  pmid       = {19901274},
+  shorttitle = {Same or different?},
+}
+
 @article{Fridlund1986,
    author = {Fridlund, A. J. and Cacioppo, J. T.},
    title = {Guidelines for human electromyographic research},
