--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
@@ -188,37 +188,43 @@ include_graphics(here("99_Thinktank","Other","Paradigm_Scheme_T2.png" ))
 
 ## Detailed information on psychometric measures {#SupplementQuestionnaires}
 
-*General psychological well-being.* 
+*WHO-5.*
+General psychological well-being is assessed using the WHO-5 scale[@Bech2004; @Braehler2007].
+5 Items such as "Over the past 2 weeks I have felt calm and relaxed." are rated on a 6-point Likert scale raning from 0 (at no time) to 5 (all of the time).
+The german version of the scale showed a high internal consistency (Cronbach's $\alpha=.92$)[@Braehler2007].
 
-*Resilience.*
+*Connor-Davidson Resilience Scale.*
+Resilience is assessed using the Connor-Davidson Resilience Scale (CD-RISC)[@Connor2003; @Campbell-Sills2007; @Sarubin2015].
+10 items such as "I am able to adapt to change." are rated on a scale from 0 (not true at all) to 4 (true nearly all the time).
+The 10-item version showed a high internal consistency (Cronbach's $\alpha=.84$) and a satisfactory retest-reliability of $r_{tt}=.81$ across 6 month[@Sarubin2015].
 
-*Habitual use of reappraisal and suppression.* 
-Habitual use of reappraisal and suppression was measured using the 10-item Emotion Regulation Questionnaire (ERQ)[@GrossJohn2003;@Abler2009].
+*Emotion Regulation Questionnaire.* 
+Habitual use of reappraisal and suppression is measured using the 10-item Emotion Regulation Questionnaire (ERQ)[@GrossJohn2003;@Abler2009].
 The scale has items such as "I keep my emotions to myself" (ERQ-suppression - 4 items) and "When I'm faced with a stressful situation, I make myself think about it in a way that helps me stay calm" (ERQ-reappraisal - 6 items), which are answered on a 7-point Likert scale ranging from 1 (strongly disagree) to 7 (strongly agree), and has acceptable to high internal consistency (Cronbach’s $\alpha>.75$) [@Preece2020].
 
-*Emotion regulation flexibility.*
-Flexible use of ER strategies was assessed using the FlexER Scale [@Doerfel2019] with items such as "If I want to feel less negative emotions, I have several strategies to achieve this.", which are answered on a 4-point scale ranging from "strongly agree" to "strongly disagree".
+*FlexER Scale.*
+Flexible use of ER strategies is assessed using the FlexER Scale [@Doerfel2019] with items such as "If I want to feel less negative emotions, I have several strategies to achieve this.", which are answered on a 4-point scale ranging from "strongly agree" to "strongly disagree".
 Psychometric properties are currently under investigation.
 
 *Implicit theories of willpower.*
 
-*Need for Cognition.*
-Need for Cognition (NFC) was assessed with the 16-item short version of the German NFC scale [@Bless1994]. 
-Responses to each item (e.g., "Thinking is not my idea of fun", recoded) were recorded on a 7-point Likert scale ranging from -3 (completely disagree) to +3 (completely agree) and were summed to the total NFC score. 
+*Need for Cognition Scale.*
+Need for Cognition (NFC) is assessed with the 16-item short version of the German NFC scale [@Bless1994]. 
+Responses to each item (e.g., "Thinking is not my idea of fun", recoded) are recorded on a 7-point Likert scale ranging from -3 (completely disagree) to +3 (completely agree) and are summed to the total NFC score. 
 The scale shows comparably high internal consistency [Cronbach's $\alpha>.80$; @Bless1994; @Fleischhauer2010] and a retest reliability of $r_{tt}=.83$ across 8 to 18 weeks [@Fleischhauer2015].
 
 *Self-Regulation Scale.*
-As one measure of self-control, the Self-Regulation Scale (SRS)[@Schwarzer1999] was used.
+As one measure of self-control, the Self-Regulation Scale (SRS)[@Schwarzer1999] is used.
 The scale has 10 items (e.g., "It is difficult for me to suppress thoughts that interfere with what I need to do.", recoded) on a 4-point scale ranging from 1 (not at all true) to 4 (exactly true).
 It has high internal consistency [Cronbach's $\alpha>.80$; @Schwarzer1999].
 
 *Brief Self-Control Scale.* 
-As a second measure of self-control, the Brief Self-Control Scale (BSCS)[@Tangney2004; @Sproesser2011] was used. 
+As a second measure of self-control, the Brief Self-Control Scale (BSCS)[@Tangney2004; @Sproesser2011] is used. 
 It comprises 13 items (e.g., “I am good at resisting temptations”) with a 5-point rating scale ranging from 1 (not at all like me) to 5 (very much like me). 
 The scale shows acceptable internal consistency (Cronbach’s $\alpha=.81$)[@Sproesser2011] .
 
 *Barratt Impulsiveness Scale.*
-As a third measure of self-control, the Barratt Impulsiveness Scale (BIS-11)[@Patton1995; @Hartmann2011] was used.
+As a third measure of self-control, the Barratt Impulsiveness Scale (BIS-11)[@Patton1995; @Hartmann2011] is used.
 Responses to each item (e.g., "I am self-controlled.", recoded) are assessed on a 4-point scale ranging from 1 (never/rarely) to 4 (almost always/always).
 An internal consistency of Cronbach's $\alpha=.74$ and a retest reliability of $r_{tt}=.56$ for General Impulsiveness and $r_{tt}=.66$ for Total Score across 6 month were reported [@Hartmann2011].
 
