--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -244,6 +244,17 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
   shorttitle = {Same or different?},
 }
 
+@article{Fleischhauer2015,
+  author = {Fleischhauer, M. and Strobel, A. and Strobel, A.},
+  title = {Directly and indirectly assessed {N}eed for {C}ognition differentially predict spontaneous and reflective information processing behavior},
+  journal = {Journal of Individual Differences},
+  volume = {36},
+  number = {2},
+  pages = {101-109},
+  DOI = {10.1027/1614-0001/a000161},
+  year = {2015},
+}
+  
 @article{Fridlund1986,
    author = {Fridlund, A. J. and Cacioppo, J. T.},
    title = {Guidelines for human electromyographic research},
